--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,10 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.14"
-dependencies = []
+dependencies = [
+    "accelerate>=1.12.0",
+    "click>=8.3.1",
+    "tiktoken>=0.12.0",
+    "torch>=2.10.0",
+    "transformers>=4.57.6",
+]
