--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.14"
 dependencies = [
     "accelerate>=1.12.0",
     "click>=8.3.1",
+    "datasets>=4.5.0",
     "tiktoken>=0.12.0",
     "torch>=2.10.0",
     "transformers>=4.57.6",
